# llm-translator

./: .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  src-tauri
.github/workflows/: cd.yml  ci.yml
docs/: android-ci-note.md  android-packaging-plan.md  android-packaging.md  architecture.md  cd-workflow-plan.md  ci-workflow-plan.md  desktop-packaging.md  language-bar-redesign.md  language-port-strategy.md  linux-desktop-packaging.md  release-artifact-path-bug.md  release-workflow-notes.md  structure-refactor-plan.md  tauri-packaging-plan.md  tauri-status.md  windows-ci-job-plan.md  windows-desktop-packaging.md  windows-packaging-plan.md  windows-packaging-runner-note.md  windows-packaging-script-plan.md
packaging/android/: package-android.mjs  sync.mjs
packaging/android/android/app/: build.gradle
packaging/android/android/app/src/main/res/values/: strings.xml
packaging/desktop/: package-linux.mjs  package-windows.mjs
packaging/desktop/tauri/: Cargo.toml  tauri.conf.json
packaging/desktop/tauri/capabilities/: default.json
packaging/desktop/tauri/src/: main.rs
scripts/: android-sync.mjs  dev-with-port.mjs  package-android.mjs  package-desktop-windows.mjs  repo-root.mjs
src/: App.css  App.tsx  index.css
src-tauri/: tauri.conf.json
src/lib/: autoTranslate.test.ts  autoTranslate.ts  configs.test.ts  configs.ts  constants.ts  languages.test.ts  languages.ts  llm.ts  portStrategy.test.ts  portStrategy.ts  storage.test.ts  storage.ts  stream.test.ts  stream.ts  types.ts
src/test/: App.test.tsx
(+1 files in other folders)
